# deepseek-v4-csa-lite-m1

./: .gitignore  DeepSeek-V4注意力机制与LiteKV验证技术分享.md  README.md  pyproject.toml
docs/plans/: 2026-04-27-001-feat-litekv-demo-plan.md
docs/solutions/best-practices/: 2026-04-29-litekv-synthetic-attention-demo-artifacts.md
experiments/: render_article_figures.py  run_litekv.py
experiments/configs/: default.yaml
notes/: article_results_template.md
src/litekv/: __init__.py  attention.py  config.py  data.py  experiment.py  metrics.py  model.py  plots.py  timing.py
tests/: test_attention.py  test_data.py  test_experiment.py  test_metrics.py  test_model.py  test_plots.py
